# TAAF-for-Image-Classification

./: .gitignore  .pdm-python  LICENSE  README.md  mnist_TAAF_model.pth  pyproject.toml
src/cifar10/: extaaf.py  train.py  visualiser.py
src/cifar100/: train.py
src/img-gen/: train.py
src/mnist/: train.py
tests/cifar10/: cifar10_TAAF_model.pth  cifar10_TAAF_model_300epochs_AdamW.pth
tests/mnist/: mnist_TAAF_model.pth
